--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "ubuntuvscode",
-    "displayName": "UbuntuVSCode",
+    "displayName": "Ubuntu VSCode Theme",
     "description": "A Ubuntu Official Color VSCode Theme",
     "version": "0.0.1",
     "publisher": "ThiagoLcioBittencourt",
+    "icon": "images/logo.png",
     "repository": {
         "url": "https://github.com/thiagolucio/ubuntuVscode"
     },
