change logo from specific folder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ubuntuvscode",
     "displayName": "Ubuntu VSCode Theme",
     "description": "A Ubuntu Official Color VSCode Theme",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "publisher": "ThiagoLcioBittencourt",
     "icon": "images/logo.png",
     "homepage": "https://thiagolucio.com.br/",
@@ -32,7 +32,7 @@
     "contributes": {
         "themes": [
             {
-                "label": "Ubuntu Color VSCode",
+                "label": "Ubuntu Color VSCode Dark Deep",
                 "uiTheme": "vs-dark",
                 "path": "./themes/Ubuntu Color VSCode-color-theme.json"
             },
