--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
                 "path": "./themes/Ubuntu Color VSCode-color-theme-dark-light.json"
             },
             {
-                "label": "Ubuntu Color VSCode Dark More Light",
+                "label": "Ubuntu Color VSCode Dark HighLight",
                 "uiTheme": "vs-dark",
-                "path": "./themes/Ubuntu Color VSCode-color-theme-dark-more-light.json"
+                "path": "./themes/Ubuntu Color VSCode-color-theme-dark-high-light.json"
             }
         ]
     }
